<resources>
    <string name="app_name">Расписание</string>
    <string name="remove">удалить</string>
    <string name="remove_from_favourite">Убрать из избранного</string>
    <string name="add_to_favourite">Добавить в избранное</string>
    <string name="favourite">Избранное</string>
    <string name="empty">Здесь пока пусто</string>
    <string name="event_locations">Места проведения:</string>
    <string name="no_internet">Нет подключения к интернету</string>
    <string name="check_internet_connection">Проверьте подключение к сети</string>
    <string name="oops">Упс!!!</string>
    <string name="something_went_wrong">Что-то пошло не так. Повторите попытку.</string>
    <string name="level_fragment_division_label_text">"Направление %s"</string>
    <string name="group_is_not_available">Расписание данной группы не доступно</string>
    <string name="remove_group_from_favourite">Можете удалить ее из избранного</string>
    <string name="details">Подробнее</string>
    <string name="group_is_not_available_details">Несмотря на одинаковое название, группы на каждый учебный период уникальны. Группа с данным идентификатором не доступна. Можете удалить ее из избранного и добавить актуальную группу.</string>
    <string name="ok">Ок</string>
    <string name="server_timeout_error_label">Не удалось подключиться к серверу</string>
    <string name="server_timeout_error_text">Попробуйте повторить попытку позднее</string>
    <string name="groups_fragment_program_label">Образовательная программа %s</string>
    <string name="groups_fragment_year_label">%s года поступления</string>
    <string name="to_main">На главную</string>
    <string name="divisions">Направления</string>
    <string name="event_time_icon_description">иконка времени</string>
    <string name="event_name_icon_description">иконка наименования</string>
    <string name="event_subgroup_icon_description">иконка подгруппы\n</string>
    <string name="event_place_icon_description">иконка места</string>
    <string name="event_educator_icon_description">иконка преподавателя</string>
    <string name="from_favourite">Из избранного</string>
    <string name="backward">Назад</string>
    <string name="current_week">Текущая неделя</string>
    <string name="forward">Вперед</string>
    <string name="no_events">Нет событий</string>
    <string name="program_combinations">Образовательные программы</string>
    <string name="application_years">Годы поступления</string>
    <string name="close">закрыть</string>
    <string name="clear_cache">Очистить кэш</string>
    <string name="clear_cache_message">Очистка кэша приведет к удалению сохраненных данных и очистке Избранного</string>
    <string name="cancel">отмена</string>
    <string name="loading">Загрузка</string>
    <string name="loading_icon_description">Иконка загрузки</string>
    <string name="slash_string">%s / %s</string>
    <string name="groups">Группы</string>
    <string name="choose_group">Выбрать группу</string>
    <string name="spbu_logo_description">Логотип СПбГУ</string>
    <string name="spbu_name_saint_petersburg">Санкт-Петербургский</string>
    <string name="spbu_name_state">государственный</string>
    <string name="spbu_name_university">университет</string>
    <string name="timetable_name">Электронное расписание</string>
    <string name="timetable_name_2">Расписание занятий СПбГУ</string>
    <string name="welcome">Добро пожаловать в</string>
    <string name="about">О программе</string>
    <string name="application_version">Версия приложения %s</string>
    <string name="legend">Условные обозначения</string>
    <string name="event_place_icon_geo_description">Иконка места проведения занятия с географическими координатами</string>
    <string name="about_fragment_changed_text_start">Выделение цветом означает</string>
    <string name="about_fragment_changed_text_end">, что в данное занятие были внесены изменения в преподавателя или место проведения (в зависимости от того, что выделено).</string>
    <string name="about_fragment_cancelled_text_start">Зачеркнутым текстом</string>
    <string name="about_fragment_cancelled_text_end">\u0020 обозначаются отмененные занятия.</string>
    <string name="about_fragment_geo_text">обозначаются места проведения с указанными координатами. При нажатии на этот символ откроется карта.</string>
    <string name="about_fragment_locations_text_start">Терракотовым цветом с подчеркиванием</string>
    <string name="about_fragment_locations_text_end">\u0020 отмечены занятия с множеством преподавателей или мест проведения. При нажатии на такую надпись откроется диалоговое окно с детализацией.</string>
    <string name="edit_favourite">Редактировать избранное</string>
</resources>