<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/events_fragment_layout">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_add_to_favourite_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/week_events_nav_panel"
        android:background="@color/spbu_additional_light_grey_color">
        <TextView
            android:id="@+id/group_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Слизерин"

            android:textSize="16sp"
            android:layout_marginStart="16dp"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_to_favourite_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/spbu_primary_terracot_color"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            >
            <TextView
                android:id="@+id/add_to_favourite_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/from_favourite"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_margin="4dp"
                />
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/week_events_nav_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/no_events_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_add_to_favourite_panel"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/previous_week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backward"
            android:textColor="@color/spbu_primary_terracot_color"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/current_week_text"
            />

        <TextView
            android:id="@+id/current_week_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_week"
            android:textColor="@color/spbu_primary_terracot_color"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/previous_week_button"
            app:layout_constraintEnd_toStartOf="@+id/next_week_button"
            />

        <TextView
            android:id="@+id/next_week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:textColor="@color/spbu_primary_terracot_color"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/current_week_text"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/no_events_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_events"
        android:textColor="@color/spbu_primary_terracot_color"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/week_events_nav_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:layout_marginTop="16dp"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/days_recycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/week_events_nav_panel"


        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/events_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:foregroundGravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/days_recycler"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>