<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        android:background="@android:color/transparent"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            >
            <TextView
                android:id="@+id/edit_favourite_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/spbu_primary_terracot_color"
                android:text="@string/edit_favourite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp"/>
            <TextView
                android:id="@+id/edit_favourite_is_empty_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                app:layout_constraintTop_toBottomOf="@id/edit_favourite_label"
                app:layout_constraintBottom_toTopOf="@id/edit_favourite_recycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_margin="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/edit_favourite_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_favourite_is_empty_text"
                app:layout_constraintBottom_toTopOf="@id/edit_favourite_dialog_close_button"
                android:layout_margin="16dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_favourite_dialog_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:text="@string/close"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:backgroundTint="@color/spbu_primary_terracot_color"
                app:cornerRadius="10dp"
                android:layout_marginBottom="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>

