<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/spbu_primary_terracot_color"
        app:strokeWidth="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:id="@+id/event_time_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/event_time_icon"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/event_time_icon_description"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/event_time_icon"
                    android:foregroundGravity="center_horizontal"
                    android:textColor="@color/spbu_primary_terracot_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="12:00" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/event_name_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_time_line"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/event_name_icon"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/event_name_icon_description"
                    android:src="@drawable/ic_event" />

                <TextView
                    android:id="@+id/event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/event_name_icon"
                    android:foregroundGravity="center_horizontal"
                    android:textSize="16sp"
                    tools:text="Лекция по зельеварению" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/event_subgroup_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_name_line"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/event_subgroup_icon"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginStart="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/event_subgroup_icon_description"
                    android:src="@drawable/ic_subgroup"
                    />

                <TextView
                    android:id="@+id/event_subgroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/event_subgroup_icon"
                    android:foregroundGravity="center_horizontal"
                    tools:text="Подгруппа" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_subgroup_line"
                android:id="@+id/event_place_line"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/event_place_icon"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginStart="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/event_place_icon_description"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/event_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/event_place_icon"
                    android:foregroundGravity="center_horizontal"
                    tools:text="Хогвартс" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_place_line"
                android:id="@+id/event_educator_line"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:id="@+id/event_educator_icon"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginStart="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/event_educator_icon_description"
                    android:src="@drawable/ic_educator" />

                <TextView
                    android:id="@+id/event_educator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/event_educator_icon"
                    android:foregroundGravity="center_horizontal"
                    tools:text="Профессор Снейп" />


            </RelativeLayout>


        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>